[package]
name = "cargo_features"
version = "0.1.0"
authors = ["yadaniel <ya.daniel@inbox.ru>"]
edition = "2018"

[features]
with_colored = ["colored"]

[dependencies]
libstrings = { git = "https://github.com/yadaniel/rust_libs.git" }
colored = {version = "1.8.0", optional = true}
chrono = "0.4.7"

