[package]
name = "slices"
version = "0.1.0"
authors = ["yadaniel <ya.daniel@inbox.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[alias]
#bd = "build"
#br = "build --release"
#r = "run"
#t = "test"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = false
debug-assertions = false
lto = false
panic = "abort"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
debug-assertions = false
lto = true
panic = "unwind"

[profile.test]
opt-level = 0
debug = false
overflow-checks = true
debug-assertions = false
lto = false
# panic = "abort"

