[package]
name = "app"
version = "0.1.0"
authors = ["yadaniel <ya.daniel@inbox.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib2 = {version = "0.1.0", path = "../lib2"}

# alternative syntax
[dependencies.lib1]
path = "../lib1"
version = "0.1.0"

